created a form and basic css

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.first-row {
+  display: flex;
+}
+
+.second-row {
+  display: flex;
+}
+
+.first-name {
+  display: flex;
+  flex-direction: column;
+}
+
+.second-name {
+  display: flex;
+  flex-direction: column;
+}
+
+.email {
+  display: flex;
+  flex-direction: column;
+}
+
+.phone {
+  display: flex;
+  flex-direction: column;
+}
+
+.third-row {
+  display: flex;
+  flex-direction: column;
+}
